<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/globalBottomNavigation"
    android:layout_width="match_parent"
    android:layout_height="82dp"
    android:background="@drawable/bg_bottom_navigation"
    android:elevation="10dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingStart="8dp"
    android:paddingTop="6dp"
    android:paddingEnd="8dp"
    android:paddingBottom="6dp">

    <Button
        android:id="@+id/buttonNavHome"
        style="@style/Widget.EasyRead.Nav"
        android:drawableTop="@drawable/ic_home"
        android:text="@string/nav_home" />

    <Button
        android:id="@+id/buttonNavDocuments"
        style="@style/Widget.EasyRead.Nav"
        android:drawableTop="@drawable/ic_folder"
        android:text="@string/nav_documents" />

    <Button
        android:id="@+id/buttonNavScan"
        style="@style/Widget.EasyRead.Nav.Primary"
        android:drawableTop="@drawable/ic_brand_scanner"
        android:text="@string/nav_scan" />

    <Button
        android:id="@+id/buttonNavTools"
        style="@style/Widget.EasyRead.Nav"
        android:drawableTop="@drawable/ic_tools"
        android:text="@string/nav_tools" />

    <Button
        android:id="@+id/buttonNavOcr"
        style="@style/Widget.EasyRead.Nav"
        android:drawableTop="@drawable/ic_read"
        android:text="@string/nav_ocr" />
</LinearLayout>
